# ojd_daps_skills

./: .gitignore  .pre-commit-config.yaml  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: docs.yml  lint.yml  pytest.yml.example
docs/: index.md
ojd_daps_skills/extract_skills/: extract_skills_utils.py
tests/: test_config.py  test_multiskill_rules.py  test_skill_mapper.py
