[tool.poetry]
name = "ojd-daps-skills"
version = "0.1.0"
description = ""
authors = ["Nesta <dataanalytics@nesta.org.uk>"]

readme = "README.md"
packages = [{include = "ojd_daps_skills"}]

[tool.poetry.dependencies]
python
pydantic 
spacy 
scikit-learn
pandas
pyyaml = "6.0.1"
skops = "0.9.0"
numpy = "1.26.4"
boto3 = "1.34.99"
botocore = "1.34.99"
toolz = "0.12.1"
sentence-transformers
torch
pytest = "8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
